[BUGFIX] Styles: Place consent bar above all other layers
Set very high z-index to avoid that the cookie bar is
overlapped by other layers (images, videos, divs etc.).

--- a/cookie-consent.css
+++ b/cookie-consent.css
@@ -6,6 +6,7 @@
   right: 0;
   bottom: 0;
   overflow: hidden;
+  z-index: 900;
 }
 
 .cookie-consent {
